[package]
authors = ["Daniel Warloch <dan.warloch@gmai.com>"]
categories = ["embedded", "hardware-support", "no-std"]
description = "Platform-agnostic Rust driver for the TMP468 remote and local temperature sensor."
documentation = "https://docs.rs/tmp46x"
edition = "2021"
keywords = ["no-std", "embedded-hal-driver", "sensor", "temperature"]
license = "MIT OR Apache-2.0"
name = "tmp468"
repository = "https://github.com/DanielWarloch/tmp46x-rs"
rust-version = "1.71.1"
version = "0.1.0"

[dependencies]
defmt = { version = "0.3", optional = true }
embedded-hal = { version = "1.0", optional = true }
embedded-hal-async = { version = "1.0", optional = true }
log = { version = "0.4", optional = true }
maybe-async-cfg = "0.2"
rustversion = "1.0"

[features]
async = ["dep:embedded-hal-async"]
default = ["sync"]
defmt-03 = ["dep:defmt"]
sync = ["dep:embedded-hal"]

[dev-dependencies]
embedded-hal-mock = { version = "0.11.1", default-features = false, features = [
    "eh1",
] }
